commiting changes for git actions

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,7 +1,5 @@
 
-on:
-  release:
-    types: [created]
+on: [push]
 
 jobs:
   build:
@@ -10,8 +8,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: npm ci
+          node-version: 18
+      - run: npm install
       - run: npm test
 
   publish-gpr:
@@ -24,9 +22,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+          node-version: 18
+          registry-url: https://npm.pkg.github.com
+      - run: npm publish --@manoj7673:registry=https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
